[project]
name = "wxverify"
version = "0.1.2"
description = "Weather forecast verification add-on for Home Assistant"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.115.14",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "pydantic==2.11.7",
  "tzdata==2025.2",
  "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "ruff==0.15.13",
  "pyright==1.1.410",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["wxverify"]
exclude = ["tests"]
